--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <!--    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>-->
+    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.js"></script>
 </head>
@@ -75,7 +75,8 @@
     <div class="nav" id="mynav">
         <div class="logo">
             <div class="stage">
-                <div class="wrapper">
+                <div class="wrapper" style="animation: none;">
+                    <!--
                     <div class="slash"></div>
                     <div class="sides">
                         <div class="side"></div>
@@ -83,13 +84,14 @@
                         <div class="side"></div>
                         <div class="side"></div>
                     </div>
+-->
                     <div class="text">
                         <div class="text--backing">ayushkarn.</div>
                         <div class="text--left">
-                            <div class="inner">ayushkarn.</div>
+                            <div class="inner" style="animation: none;">ayushkarn.</div>
                         </div>
                         <div class="text--right">
-                            <div class="inner">ayushkarn.</div>
+                            <div class="inner" style="animation: none;">ayushkarn.</div>
                         </div>
                     </div>
                 </div>
@@ -123,12 +125,12 @@
         </div>
     </div>
 
-    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;">
-        <div class="container-title" data-aos="fade-up" style="color: #fff;">
+    <div class="container footer" style="background-color: rgb(18, 22, 72); color: #fff;">
+        <div class="container-title" style="color: #fff;">
             LET ME CREATE WHAT YOU NEED.
             <hr class="soften white" />
         </div>
-        <div class="footer-menu" data-aos="fade-up">
+        <div class="footer-menu">
             <ul class="footer-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resume</a></li>
@@ -137,10 +139,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="content" data-aos="fade-up" style="margin-top: 20px;font-size: 0.8em; ">
+        <div class="content" style="margin-top: 20px;font-size: 0.8em; ">
             &copy; 2020 Ayush Karn. All rights reserved.
         </div>
-        <div class="social_media" data-aos="fade-up">
+        <div class="social_media">
             <a href="https://www.github.com/ayush2599"><i class="fa fa-github m-3"></i></a>
             <a href="https://www.linkedin/ayush-karn25"><i class="fa fa-linkedin m-3"></i></a>
             <a href="https://www.instagram.com/ayush_diaries"><i class="fa fa-instagram m-3"></i></a>
@@ -151,7 +153,7 @@
 </body>
 <script src="/js/pdfobject.js"></script>
 <script>
-    PDFObject.embed("/Resume.pdf", ".items-container");
+    PDFObject.embed("Resume.pdf", ".items-container");
 
 </script>
 <script>
@@ -292,7 +294,8 @@
 
 <script id="rendered-js">
     AOS.init({
-        duration: 1200
+        duration: 1200,
+        once: true
     });
 
 </script>
