--- a/artworks.html
+++ b/artworks.html
@@ -94,7 +94,8 @@
     <div class="nav" id="mynav" style="z-index: 10">
         <div class="logo">
             <div class="stage">
-                <div class="wrapper">
+                <div class="wrapper" style="animation: none;">
+                    <!--
                     <div class="slash"></div>
                     <div class="sides">
                         <div class="side"></div>
@@ -102,13 +103,14 @@
                         <div class="side"></div>
                         <div class="side"></div>
                     </div>
+-->
                     <div class="text">
                         <div class="text--backing">ayushkarn.</div>
                         <div class="text--left">
-                            <div class="inner">ayushkarn.</div>
+                            <div class="inner" style="animation: none;">ayushkarn.</div>
                         </div>
                         <div class="text--right">
-                            <div class="inner">ayushkarn.</div>
+                            <div class="inner" style="animation: none;">ayushkarn.</div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +193,7 @@
                     </div>
                 </div><!-- Lightbox -->
 
-                <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery4-4" style="display: none;z-index: 1050;" aria-hidden="true">
+                <div data-app-prevent-settings="" class="mbr-slider gallery-large modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery4-4" style="display: none;z-index: 1050;" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-body">
@@ -238,6 +240,7 @@
                     </div>
                 </div>
 
+
             </div>
         </div>
 
@@ -281,30 +284,6 @@
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                </div><!-- Lightbox -->
-                <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery4-4 collab" style="display: none;z-index: 1050;" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-body">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active" style="top: 10px;"><img src="gallery/assets/images/Chester.jpg" alt="Chester Bennigton" title="Chester Bennigton" style="width: 414px;height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/Scarce.jpg" alt="Chester Bennigton" title="Chester Bennigton" style="width: 517px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/Scarce.jpg" alt="Scarce" title="Scarce" style="width: 517px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/Witcher%20Final.jpg" alt="The Witcher" title="The Witcher" style="width: 455px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/Stephen%20Hawking.jpg" alt="Stephen Hawking" title="Stephen Hawking" style="width: 889px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/Sunil%20Chetri.jpg" alt="Sunil Chhetri" title="Sunil Chhetri" style="width: 450px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/shreya-ghoshal-2000x2843.jpg" alt="Shreya Ghoshal" title="Shreya Ghoshal" style="width: 455px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/priyal-ji-sketch-790x781.jpg" alt="" title="" style="width: 654px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 63.5px;"><img src="gallery/assets/images/452f051459d245a526eef9692a081edf-660x540.jpg" alt="Glass" title="Glass-HyperRealism" style="width: 660px; height: 540px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/img-20180523-143445-ao-hdr-edited-colour-copyright-2000x2723.jpg" alt="Lady Water" title="Lady Water" style="width: 475px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/save-20190221-121841-2000x1736.jpg" alt="" title="" style="width: 745px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/with-shreya-ghoshal-esha-blurred-1968x2220.jpg" alt="" title="" style="width: 573px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/goku-digital-art-1080x1350.jpg" alt="Goku" title="Goku-Digital Art" style="width: 517px; height: 647px;"></div>
-                                    <div class="carousel-item" style="top: 10px;"><img src="gallery/assets/images/img-20161008-155045-edited-2000x1543.jpg" alt="Eye" title="Eye" style="width: 838px; height: 647px;"></div>
-                                </div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery4-4"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery4-4"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -328,10 +307,11 @@
     <!--    <script src="gallery/assets/gallery/script.js"></script>-->
 
     <div class="container footer" style="background-color: rgb(18, 22, 72); color: #fff;">
-        <div class="container-title" style="color: #fff;margin: 0;width: 100%;padding: 0;">
+        <div class="container-title" style="color: #fff;">
             LET ME CREATE WHAT YOU NEED.
             <hr class="soften white" />
         </div>
+
         <div class="footer-menu">
             <ul class="footer-list">
                 <li><a href="index.html">Home</a></li>
@@ -341,6 +321,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
+
         <div class="content" style="margin-top: 20px;font-size: 0.8em; ">
             &copy; 2020 Ayush Karn. All rights reserved.
         </div>
@@ -447,7 +428,8 @@
 
 <script id="rendered-js">
     AOS.init({
-        duration: 1200
+        duration: 1200,
+        once: true
     });
 
 </script>
